@@ -1,0 +1,5 @@
+.ai.code.prompt.org
+.projectile
+GTAGS
+GRTAGS
+GPATH
