@@ -16,3 +16,4 @@
 - Chore: Enhance AI shell command input to support file name expansion in dired mode
 - Chore (inspector): migrate to eshell for improved command handling
 - Chore: Update .gitignore with AI Code entries
+- Feat: generate python MCP config (json / toml)
